syntax = "proto3";

package application;

import "google/protobuf/empty.proto";

option go_package = "shopflow/application/pb;pb";

// Сообщение для создания заявки
message CreateApplicationRequest {
  uint32 user_id = 1;
  string text = 2;
  string file_url = 3;
  string status = 4; // необязательный, можно оставить пустым для "new"
}

// Сообщение для обновления заявки
message UpdateApplicationRequest {
  uint32 id = 1;
  string text = 2;
  string file_url = 3;
  string status = 4;
}

// Сообщение для ответа с одной заявкой
message Application {
  uint32 id = 1;
  uint32 user_id = 2;
  string text = 3;
  string file_url = 4;
  string status = 5;
  string created_at = 6;
  string updated_at = 7;
}

// Сообщение для запроса по ID
message GetApplicationByIdRequest {
  uint32 id = 1;
}

// Сообщение для ответа с множеством заявок
message GetApplicationsResponse {
  repeated Application applications = 1;
}

// Сообщение для запроса на удаление
message DeleteApplicationRequest {
  uint32 id = 1;
}

// Сервис Application
service ApplicationService {
  rpc CreateApplication(CreateApplicationRequest) returns (Application);
  rpc GetApplicationById(GetApplicationByIdRequest) returns (Application);
  rpc GetApplications(google.protobuf.Empty) returns (GetApplicationsResponse);
  rpc UpdateApplication(UpdateApplicationRequest) returns (Application);
  rpc DeleteApplication(DeleteApplicationRequest) returns (google.protobuf.Empty);
}
